--- a/style/style.css
+++ b/style/style.css
@@ -1,83 +1,82 @@
-*,ul,li,table,td,tr,p,h1,h2,h3 {
-padding: 0;
-margin: 0;
+div {
+ outline:0px solid red;
 }
 
 body {
-  font-family: Georgia,Helvetica;
-  font-size: 11px; 
-}
-div {
-  
+ padding: 0;
+ margin:0;
+ border-top: 30px solid #87A96B;
 }
 
-#page_wrap {
- position: relative;
- width: 100%;
- height: 900px;
-
-outline: 0px solid green;
+#outer_wrap {
+   border-top: 260px solid #dedede;
 }
 
-#masthead_wrap {
-  height: 80px;
-}
-
-#masthead_wrap .masthead {
-
-  font-size: 2em;
-}
-
-
-#content_frame {
-}
-
-#leftmenu_frame {
-  position: absolute;
-  height: 820px;
-  width:180px;
-  margin-left: 0px;
-  padding-left: 10px;
-}
-
-#mastercontent_wrap {
- height: 820px;
- 
- width: 100%;
- margin-left: 180px;
- position: absolute;
-}
-
-.status {
-  background-color: yellow;
-  font-weight:  bold;
-  font-style: italic;
-}
-
-.top_menu {
-  margin-left: 250px;
-}
-
-.top_menu ul {
-  list-style-type: none;
-}
-
-.top_menu ul li {
-  display: inline;
-  margin-right: 30px;
-  font-weight: bold;
+ul {
+ padding:0;
+ margin:0;
+ list-style-type: none;
+ font-weight: bold;
 }
 
 #leftmenu_frame ul {
-  list-style-type: none;
-  margin-bottom: 20px;
- 
-  
+  margin-left: 10px;
 }
 
-#leftmenu_frame ul li {
-  margin-bottom: 8px;
-  padding-left: 20px;
-  font-weight: bold;
-  font-size: 14px;
+ 
+ #masthead_wrap ul {
+  padding-bottom: 20px;
+   padding-top: 10px;
+  margin-left: 10px;
+ }
+ 
+#masthead_wrap ul li {
+  display: inline;
+  margin-right: 25px;
+ 
+}
+
+
+
+
+
+#page_wrap {
+   width: 980px;
+   margin-left:auto;
+   margin-right:auto;
+   margin-top:0;
+   outline: 6px solid gray;
+   margin-top: -220px;
+  background-color: #fff;
+}
+
+#content_frame {
+  overflow: auto;
+}
+
+#leftmenu_frame {
+ width: 100px;
+ border-right: 0px solid blue;
+ float: left;
+ background-color: #FF;
+}
+
+#mastercontent_wrap {
+  width: 880px;
+ 
+  float: left;
+ /**  background-color: lightBlue; **/
+   overflow: auto;
+
+}
+
+
+#innermaster_wrap {
+  width: 380px;
+  float: left;
+}
+
+#innerdetail_wrap {
+  width: 500px;
+   float: left;
 }
